# NetworkPractice

./: .gitignore  .gitmodules
complexChat/: .bazelrc  BUILD.bazel  MODULE.bazel  WORKSPACE  client.cpp  common.h  config.h  message.proto  server.cpp
orderManage/: .env  CMakeLists.txt  build.txt  todo.txt  vcpkg.json
orderManage/exchange/: CMakeLists.txt  exchangeMessages.proto  mockExchange.py  requirements.txt
orderManage/kafka/: CMakeLists.txt  kafkaTopics.h  readAllKafka.cpp  readKafkaAsProduced.cpp
orderManage/market/: .env  CMakeLists.txt  marketClear.py  marketMessages.proto  mockMarket.py  requirements.txt
orderManage/market/tests/: conftest.py  test_market.py
orderManage/order-manage-rust/: Cargo.toml  build.rs
orderManage/order-manage-rust/src/: main.rs  market_connect.rs
orderManage/orderManage/: CMakeLists.txt  main.cpp  marketConnect.h  marketState.cpp  marketState.h
orderManage/orderManage/tests/: CMakeLists.txt  test_market_state.cpp
orderManage/orderManageCpp/: CMakeLists.txt  build.txt  todo.txt  vcpkg.json
orderManage/orderManageCpp/kafka/: CMakeLists.txt  deleteAllKafka.cpp
orderManage/orderManageCpp/orderManage/: CMakeLists.txt  main.cpp  marketState.cpp  marketState.h
orderManage/orderManageCpp/orderManage/tests/: CMakeLists.txt
orderManage/orderManageCpp/proto/: CMakeLists.txt
orderManage/proto/: CMakeLists.txt  logMessages.proto  marketMessages.proto  printLogProto.h  printMarketProto.h
orderManage/tests/: CMakeLists.txt
rabbitChat/: CMakeLists.txt  README.md  client.cpp  message.proto  vcpkg.json
simpleChat/: client.cpp  hangClient.cpp  server.cpp  test.py  tinyClient.cpp
simplesocket/: client.cpp  server.cpp
