cmake_minimum_required(VERSION 4.2.3)
project(OrderManage LANGUAGES CXX)

enable_testing()
find_package(Protobuf CONFIG REQUIRED)
find_package(PkgConfig REQUIRED)
pkg_check_modules(RDKAFKA REQUIRED IMPORTED_TARGET rdkafka)
add_subdirectory(proto)
add_subdirectory(kafka)
add_subdirectory(market)
add_subdirectory(orderManage)